brat/test/golden/error/portpull.brat
id(Nat) -> Nat
id = x => x

-- This one should fail because there is no port name "z"
id2(Nat, Nat) -> Nat, Nat
id2 = x,y => (id, id)(a1:x, y)
